--- a/package.json
+++ b/package.json
@@ -40,15 +40,14 @@
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
     "eslint": "^7.0.0",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.0.0",
-    "eslint-config-standard": "^16.0.0",
-    "eslint-config-standard-react": "^11.0.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-jsx-a11y": "^6.0.0",
     "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^5.0.0",
     "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "gh-pages": "^2.2.0",
     "microbundle-crl": "^0.13.10",
     "npm-run-all": "^4.1.5",
