--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^16.0.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.0.0",
     "@testing-library/jest-dom": "^5.0.0",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.0.0",
