--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@testing-library/dom": "^7.0.0",
     "@testing-library/jest-dom": "^5.0.0",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/react-hooks": "^7.0.1",
     "@testing-library/user-event": "^13.0.0",
     "@types/jest": "^26.0.0",
     "@types/node": "^12.12.38",
